--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,15 +19,12 @@
             </intent-filter>
         </activity>
 		<activity
-            android:name=".Second_Activity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:name=".Second_Activity">
         </activity>
+        <activity
+            android:name=".WorkoutMainActivity">
+        </activity>
+
     </application>
 
 </manifest>
