db management exercise page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         <activity
             android:name=".WorkoutMainActivity">
         </activity>
+        <activity
+            android:name=".ExerciseMainActivity">
+        </activity>
 
     </application>
 
